--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,10 @@ license = "MIT OR Apache-2.0"
 keywords = ["yew", "trunk"]
 categories = ["gui", "wasm", "web-programming"]
 
+[target.wasm32-unknown-unknown]
+rustflags = ["-C", "target-feature=+atomics,+bulk-memory,+mutable-globals", "-C",
+ "link-arg=--max-memory=17179869184"]
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
 yew = { version="0.20", features=["csr"] }
@@ -19,3 +23,5 @@ gloo-net = "0.2"
 wasm-bindgen-futures = "0.4"
 regex = "1.7.0"
 fancy-regex = "0.10.0"
+getrandom = { version = "0.2", features = ["js"] }
+rand = "0.8.5"
